add navbar with types

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- fonts preload -->
+    <link rel="preload" href="./src/assets/fonts/barlow/barlow-bold.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="./src/assets/fonts/barlow/barlow-medium.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="./src/assets/fonts/barlow/barlow-regular.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="./src/assets/fonts/barlow/barlow-thin.ttf" as="font" type="font/ttf" crossorigin />
+
+    <title>Netflix Clone</title>
   </head>
   <body>
     <div id="root"></div>
