--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preload" href="./src/assets/fonts/barlow/barlow-medium.ttf" as="font" type="font/ttf" crossorigin />
     <link rel="preload" href="./src/assets/fonts/barlow/barlow-regular.ttf" as="font" type="font/ttf" crossorigin />
     <link rel="preload" href="./src/assets/fonts/barlow/barlow-thin.ttf" as="font" type="font/ttf" crossorigin />
-
+    <link rel="preload" as="image" href="./src/assets/images/bg.jpg">
+    
     <title>Netflix Clone</title>
   </head>
   <body>
