--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- fonts preload -->
+    <!-- preload fonts, images -->
     <link rel="preload" href="./src/assets/fonts/barlow/barlow-bold.ttf" as="font" type="font/ttf" crossorigin />
     <link rel="preload" href="./src/assets/fonts/barlow/barlow-medium.ttf" as="font" type="font/ttf" crossorigin />
     <link rel="preload" href="./src/assets/fonts/barlow/barlow-regular.ttf" as="font" type="font/ttf" crossorigin />
     <link rel="preload" href="./src/assets/fonts/barlow/barlow-thin.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="./src/assets/fonts/bayon/Bayon-Regular.ttf" as="font" type="font/ttf" crossorigin />
     <link rel="preload" as="image" href="./src/assets/images/bg.jpg">
     
     <title>Netflix Clone</title>
